overlays/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-service
  labels:
    app.kubernetes.io/name: example-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: example-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-service
    spec:
      imagePullSecrets: 
      - name: docker-pull-secret
      containers:
      - name: example-service
        image: ghcr.io/gpt-next/example-service:main
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
