overlays/dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  type: ClusterIP
  ports:
  - name: example-service
    port: 80
    targetPort: 4000
  selector:
    app.kubernetes.io/name: example-service
